add: new feature subdistrict
