# docs/swagger.json
@@ -291,6 +291,56 @@
                 }
             }
         },
+        "/master/subdistricts": {
+            "get": {
+                "description": "Mengambil master list subdistricts/kelurahan berdasarkan district",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "3. Master"
+                ],
+                "summary": "Get List Subdistricts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "district_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Berhasil mengambil data subdistrict",
+                        "schema": {
+                            "$ref": "#/definitions/master.SwaggerSubdistrictPagination"
+                        }
+                    }
+                }
+            }
+        },
         "/order": {
             "get": {
                 "description": "Mengambil daftar order milik user yang login",
@@ -475,9 +525,6 @@
         "master.ListCityResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
@@ -495,9 +542,6 @@
                 "city_id": {
                     "type": "string"
                 },
-                "code": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
@@ -509,6 +553,20 @@
         "master.ListProvinceResponse": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "master.ListSubdistrictResponse": {
+            "type": "object",
+            "properties": {
+                "district_id": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -588,6 +646,38 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/master.ListProvinceResponse"
+                    }
+                },
+                "message": {
+                    "type": "string",
+                    "example": "OK"
+                },
+                "page": {
+                    "type": "object",
+                    "properties": {
+                        "current": {
+                            "type": "integer",
+                            "example": 1
+                        },
+                        "size": {
+                            "type": "integer",
+                            "example": 10
+                        },
+                        "total": {
+                            "type": "integer",
+                            "example": 37
+                        }
+                    }
+                }
+            }
+        },
+        "master.SwaggerSubdistrictPagination": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/master.ListSubdistrictResponse"
                     }
                 },
                 "message": {
